kermeta_projects/fr.irisa.triskell.kermeta.io/test/constraintchecker_tests/invalid/001_cyclicinheritance_03.kmt
/* $Id: 001_cyclicinheritance_03.kmt,v 1.1 2005-11-23 09:35:27 dvojtise Exp $ */

// Test of a invalid inheritance

package root_package;


/* cycle inheritance*/
class A inherits B{
    
}
class B inherits C{
    
}

class C inherits A{
    
}
